--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ LinkingTo:
     RcppArmadillo
 Depends:
     RcppArmadillo
+URL: https://github.com/bradtrew/airR
+BugReports: https://github.com/bradtrew/airR/issues
