--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(xgb_error,"function")
 S3method(xgb_error,character)
 S3method(xgb_error,default)
-export()
 export(absolute_error)
 export(accuracy)
 export(brier_score)
@@ -23,4 +22,5 @@ export(thresh)
 export(tru_neg_rate)
 export(xgb_error)
 importFrom(Rcpp,sourceCpp)
+importFrom(xgboost,getinfo)
 useDynLib(airR)
